--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
                     <div class="column lg-12" data-animate-block>
 
-                        <h2 class="text-pretitle" data-animate-el>
+                        <h2 class="text-pretitle with-line" data-animate-el>
                             Recent Works
                         </h2>
 
@@ -706,8 +706,10 @@
                     <div class="column lg-12">
                         <h2 class="text-pretitle with-line">Contact</h2>
                         <ul>
-                            <li>yuan.zheng@aalto.fi</li>
-                            <li>jerryzheng1021@gmail.com </li>
+                            <li>Email: <a href="mailto:yuan.zheng@aalto.fi" class="mailtoui">yuan.zheng@aalto.fi</a> <br> </li>
+                            <li>Email: <a href="mailto: jerryzheng1021@gmail.com" class="mailtoui">jerryzheng1021@gmail.com </a> <br></li>
+                            <li>LinkedIn <a href="https://www.linkedin.com/in/yuan-z-aa0832123/" > Yuan Zheng </a> </li>
+                            <li>ResearchGate <a href="https://www.researchgate.net/profile/Yuan-Zheng-7/research" > Yuan Zheng </a> </li>
 
                         </ul>
                     </div>
